# gRPCClient

./: CMakeLists.txt  Client.cpp  Client.hpp  main.cpp
proto/: Message.grpc.pb.cc  Message.grpc.pb.h  Message.pb.cc  Message.pb.h  Message.proto
